Major Design Overhall

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,40 @@
 <!doctype html>
-	<html lang="en">
-	  <head>
-	    <meta charset="utf-8">
-	    <title>Portfolio</title>
-	  </head>
-	  <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
-	  </body>
-	</html>
+<html lang="en”>
+  <head>
+    <meta charset="utf-8">
+    <link href="adam.css" rel="stylesheet" type="text/css"> 
+    <title>Mr E - Portfolio</title>
+  </head>
+  <body>
+    <center>  
+      <img src="images/face.jpg" height="100">
+      <h1>mr e's pltw csp portfolio</h1>
+      <a href="index.html">home</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="aboutme">about me</a>
+      <a href="http://my.pltw.org">pltw lms</a>
+      <a href="http://www.codecademy.com">code academy</a>
+      <a href="http://projecteuler.net/">project euler</a>
+    </center>
+    <p1>
+      <table>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th> 
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+      </table>
+    </p1>
+
+  </body>
+</html>
