--- a/214/index.html
+++ b/214/index.html
@@ -5,6 +5,10 @@
         <title>Mr. E's 2.1.4</title>
     </head>
     <body>
+        <a href="/index.html">Home</a>
+        <a href="/portfolio.html">Portfolio</a>
+        <a href="index.html">2.1.4 Page</a>
+        <a href="ice.html">Ice Cream</a>
         <h1>
             This is easy and fun!
         </h1>
