Added About Me/Portfolio Day 1 info

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="adam.css" rel="stylesheet" type="text/css"> 
-    <title>Mr E's Page</title>
+    <title>mr e - about me</title>
   </head>
   <body>
     <center>  
@@ -11,11 +11,19 @@
       <h1>mr e's home page</h1>
       <a href="index.html">home</a>
       <a href="portfolio.html">portfolio</a>
-      <a href="aboutme">about me</a>
+      <a href="aboutme.html">about me</a>
       <a href="http://my.pltw.org">pltw lms</a>
       <a href="http://www.codecademy.com">code academy</a>
       <a href="http://projecteuler.net/">project euler</a>
     </center>
-
+    <center>
+    <p>Married with three littles</p>
+    <img src="images/wife.jpg" height="200">
+    <img src="images/fam.jpg" height="200">
+    <p>I do wood working as a hobby</p>
+    <img src="images/bed1.jpg" height="200">
+    <img src="images/table.jpg" height="200">
+    <img src="images/changing.jpg" height="200">
+    </center>
   </body>
 </html>
