--- a/portfolio.html
+++ b/portfolio.html
@@ -11,30 +11,38 @@
       <h1>mr e's pltw csp portfolio</h1>
       <a href="index.html">home</a>
       <a href="portfolio.html">portfolio</a>
-      <a href="aboutme">about me</a>
+      <a href="aboutme.html">about me</a>
       <a href="http://my.pltw.org">pltw lms</a>
       <a href="http://www.codecademy.com">code academy</a>
       <a href="http://projecteuler.net/">project euler</a>
     </center>
-    <p1>
-      <table>
-        <tr>
-          <th>Firstname</th>
-          <th>Lastname</th> 
-          <th>Age</th>
-        </tr>
-        <tr>
-          <td>Jill</td>
-          <td>Smith</td> 
-          <td>50</td>
-        </tr>
-        <tr>
-          <td>Eve</td>
-          <td>Jackson</td> 
-          <td>94</td>
-        </tr>
-      </table>
-    </p1>
+    <break></break>
+    <center>
+      <p1>
+        <table>
+          <th>Day 1</th>
+          <th>Day 2</th>
+          <th>Day 3</th>
+          <th>Day 4</th>
+          <th>Day 5</th>
+          
+          <tr>
+            <td>Website</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><a href="index.html"><img src="images/pagepreview.jpg" height="100"></a></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+      </p1>
+    </center>
 
   </body>
 </html>
