--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>mr e's home page</h1>
       <a href="index.html">home</a>
       <a href="portfolio.html">portfolio</a>
-      <a href="aboutme">about me</a>
+      <a href="aboutme.html">about me</a>
       <a href="http://my.pltw.org">pltw lms</a>
       <a href="http://www.codecademy.com">code academy</a>
       <a href="http://projecteuler.net/">project euler</a>
