Updated Tuesday's Scratch Assignment

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,9 +12,9 @@
       <a href="index.html">home</a>
       <a href="portfolio.html">portfolio</a>
       <a href="aboutme.html">about me</a>
-      <a href="http://my.pltw.org">pltw lms</a>
-      <a href="http://www.codecademy.com">code academy</a>
-      <a href="http://projecteuler.net/">project euler</a>
+      <a href="http://my.pltw.org" target="_blank">pltw lms</a>
+      <a href="http://www.codecademy.com" target="_blank">code academy</a>
+      <a href="http://projecteuler.net/" target="_blank">project euler</a>
     </center>
     <center>
     <p>Married with three littles</p>
