--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
       <a href="index.html">home</a>
       <a href="portfolio.html">portfolio</a>
       <a href="aboutme.html">about me</a>
-      <a href="http://my.pltw.org">pltw lms</a>
-      <a href="http://www.codecademy.com">code academy</a>
-      <a href="http://projecteuler.net/">project euler</a>
+      <a href="http://my.pltw.org" target="_blank">pltw lms</a>
+      <a href="http://www.codecademy.com" target="_blank">code academy</a>
+      <a href="http://projecteuler.net/" target="_blank">project euler</a>
     </center>
     <break></break>
     <center>
@@ -27,14 +27,18 @@
           <th>Day 5</th>
           
           <tr>
-            <td>Website</td>
-            <td></td>
+            <td>Website<p><a href="index.html"><img src="images/pagepreview.jpg" height="100"></p></td>
+            <td>Scratch Piano<p><a href="https://scratch.mit.edu/projects/117106970/"><img src="images/piano.jpg" height="100"></a></p>
+            Dr Octo 
+            <p><a href="https://scratch.mit.edu/projects/117119204/#fullscreen"><img src="images/drocto.png" height="100"></a></p>
+            </td>
+            
             <td></td>
             <td></td>
             <td></td>
           </tr>
           <tr>
-            <td><a href="index.html"><img src="images/pagepreview.jpg" height="100"></a></td>
+            <td></a></td>
             <td></td>
             <td></td>
             <td></td>
