Added Mouse Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en”>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link href="adam.css" rel="stylesheet" type="text/css"> 
@@ -27,10 +27,12 @@
           <th>Day 5</th>
           
           <tr>
-            <td>Website<p><a href="index.html"><img src="images/pagepreview.jpg" height="100"></p></td>
-            <td>Scratch Piano<p><a href="https://scratch.mit.edu/projects/117106970/"><img src="images/piano.jpg" height="100"></a></p>
+            <td>Website<p><a href="index.html" target="_blank"><img src="images/pagepreview.jpg" height="100"></p></td>
+            <td>Scratch Piano<p><a href="https://scratch.mit.edu/projects/117106970/"target="_blank"><img src="images/piano.jpg" height="100"></a></p>
             Dr Octo 
-            <p><a href="https://scratch.mit.edu/projects/117119204/#fullscreen"><img src="images/drocto.png" height="100"></a></p>
+            <p><a href="https://scratch.mit.edu/projects/117119204/#fullscreen"target="_blank"><img src="images/drocto.png" height="100"></a></p>
+            Revenge of the Mice
+            <p><a href="https://scratch.mit.edu/projects/117127668/#fullscreen"target="_blank"><img src="images/micegame.jpg" height="100"></a></p>
             </td>
             
             <td></td>
