Updated day 3 links for android app

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -34,8 +34,14 @@
             Revenge of the Mice
             <p><a href="https://scratch.mit.edu/projects/117127668/#fullscreen"target="_blank"><img src="images/micegame.jpg" height="100"></a></p>
             </td>
-            
-            <td></td>
+            <td>
+            Photobooth<p>-App Inventor Code-</p>
+              <p><a href="files/PhotoBooth.aia"><img src="images/PhotoBooth.png" height = 100></a></p>
+              <p> Photobooth<p/>
+              
+              </p>-Android Package-</p>
+              <p><a href="files/PhotoBooth.apk"><img src="images/PhotoBooth.png" height = "100"></a></p>
+              </td>
             <td></td>
             <td></td>
           </tr>
