--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -42,11 +42,22 @@
               </p>-Android Package-</p>
               <p><a href="files/PhotoBooth.apk"><img src="images/PhotoBooth.png" height = "100"></a></p>
               </td>
-            <td></td>
-            <td></td>
+            <td>
+            Defeating Dot and Scan<p><a href="https://repl.it/ChE8/22"><img src= "images/interactivefiction.JPG" height = "100"></a></p>
+            </td>
+            <td>
+            Wheel of 'Fortran'<p><a href="https://repl.it/Ch4o/10"><img src= "images/Wheel of Fortran.JPG" height = "100"></a></p>  
+            </td>
           </tr>
           <tr>
-            <td></a></td>
+            <th>Day 6</th>
+            <th>Day 7</th>
+            <th>Day 8</th>
+            <th>Day 9</th>
+            <th>Day 10</th>
+          </tr>
+          <tr>
+            <td>Hi</td>
             <td></td>
             <td></td>
             <td></td>
