--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -57,7 +57,14 @@
             <th>Day 10</th>
           </tr>
           <tr>
-            <td>Hi</td>
+            <td>
+              Source Images
+              <p><a href = "images/scott.JPG"><img src = "images/scott.JPG" height = "200"></a></p>
+              <p><a href = "images/daniel.JPG"><img src = "images/daniel.JPG"height = "200"></a></p>
+              <p><a href = "images/rushmore.jpg"><img src = "images/rushmore.jpg" height = "150"></a></p>
+              <p>Final Image - "Mount PyMore</p>
+              <p><a href = "images/Mount_PyMore.bmp"><img src = "images/Mount_PyMore.bmp" height = "150"></a></p>
+            </td>
             <td></td>
             <td></td>
             <td></td>
