Added Day 7 Work

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -61,11 +61,21 @@
               Source Images
               <p><a href = "images/scott.JPG"><img src = "images/scott.JPG" height = "200"></a></p>
               <p><a href = "images/daniel.JPG"><img src = "images/daniel.JPG"height = "200"></a></p>
-              <p><a href = "images/rushmore.jpg"><img src = "images/rushmore.jpg" height = "150"></a></p>
+              <p><a href = "images/rushmore.jpg"><img src = "images/rushmore.jpg" height = "100"></a></p>
               <p>Final Image - "Mount PyMore</p>
-              <p><a href = "images/Mount_PyMore.bmp"><img src = "images/Mount_PyMore.bmp" height = "150"></a></p>
+              <p><a href = "images/Mount_PyMore.bmp"><img src = "images/Mount_PyMore.bmp" height = "100"></a></p>
             </td>
-            <td></td>
+            <td>
+            <h4>"Big Data" Project</h4>
+            <p>Data Source:</p> 
+            <p>>Chigago Transit Authority</p>
+            <p><a href= "files/google_transit.zip"><img src="images/folder.png" height = "100"></a></p>
+            <p>Python Code</p>
+            <p><a href= "files/Transit.py"><img src="images/pycode.JPG"height = "100"></a></p>
+            <p>GPS Location of every 8:00</p>
+            <p>bus stop in Chicago</p>
+            <p><a href= "images/8am.png"><img src="images/8am.png"height = "100"></a></p>
+            </td>
             <td></td>
             <td></td>
             <td></td>
