--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -76,7 +76,13 @@
             <p>bus stop in Chicago</p>
             <p><a href= "images/8am.png"><img src="images/8am.png"height = "100"></a></p>
             </td>
-            <td></td>
+            <td>
+              <h4>Net Logo Project</h4>
+            "Random" Balls
+            <p>
+              <a href="files/Random BallsModified.nlogo"><img src="images/NetLogoProject.JPG" height="100"></a>
+            </p>
+            </td>
             <td></td>
             <td></td>
           </tr>
