Table Fix (Hopefully)

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -27,14 +27,14 @@
           <th>Day 5</th>
           
           <tr>
-            <td>Website<p><a href="index.html" target="_blank"><img src="images/pagepreview.jpg" height="100"></p></td>
-            <td>Scratch Piano<p><a href="https://scratch.mit.edu/projects/117106970/"target="_blank"><img src="images/piano.jpg" height="100"></a></p>
+            <td><h4>My Website</h4><p>adamelwer.gethub.io/my_website</p><p><a href="index.html" target="_blank"><img src="images/pagepreview.jpg" height="100"></p></td>
+            <td><h4>Scratch Projects</h4>Scratch Piano<p><a href="https://scratch.mit.edu/projects/117106970/"target="_blank"><img src="images/piano.jpg" height="100"></a></p>
             Dr Octo 
             <p><a href="https://scratch.mit.edu/projects/117119204/#fullscreen"target="_blank"><img src="images/drocto.png" height="100"></a></p>
             Revenge of the Mice
             <p><a href="https://scratch.mit.edu/projects/117127668/#fullscreen"target="_blank"><img src="images/micegame.jpg" height="100"></a></p>
             </td>
-            <td>
+            <td><h4>App Inventor Project</h4>
             Photobooth<p>-App Inventor Code-</p>
               <p><a href="files/PhotoBooth.aia"><img src="images/PhotoBooth.png" height = 100></a></p>
               <p> Photobooth<p/>
@@ -42,10 +42,10 @@
               </p>-Android Package-</p>
               <p><a href="files/PhotoBooth.apk"><img src="images/PhotoBooth.png" height = "100"></a></p>
               </td>
-            <td>
+            <td><h4>Interactive Fiction(Python)</h4>
             Defeating Dot and Scan<p><a href="https://repl.it/ChE8/22"><img src= "images/interactivefiction.JPG" height = "100"></a></p>
             </td>
-            <td>
+            <td><h4>Showcase Program(Python)</h4>
             Wheel of 'Fortran'<p><a href="https://repl.it/Ch4o/10"><img src= "images/Wheel of Fortran.JPG" height = "100"></a></p>  
             </td>
           </tr>
@@ -57,7 +57,7 @@
             <th>Day 10</th>
           </tr>
           <tr>
-            <td>
+            <td><h4>Image Manipulation(Python)</h4>
               Source Images
               <p><a href = "images/scott.JPG"><img src = "images/scott.JPG" height = "200"></a></p>
               <p><a href = "images/daniel.JPG"><img src = "images/daniel.JPG"height = "200"></a></p>
