--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -83,7 +83,13 @@
               <a href="files/Random BallsModified.nlogo"><img src="images/NetLogoProject.JPG" height="100"></a>
             </p>
             </td>
-            <td></td>
+            <td>
+              <h4>Arduino Project</h4>
+              <p>Spells out Adam with Smiley</p>
+              <a href="files/adam.ino"><img src="images/Arduino.jpg" height="100"></a>
+              <p></p>
+              <video id="Arduino Project" src="files/Video.MOV" controls width="200"></video>
+            </td>
             <td></td>
           </tr>
         </table>
