Updated portfolio page

--- a/CSP/portfolio.html
+++ b/CSP/portfolio.html
@@ -2,11 +2,11 @@
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
-	      <link rel="stylesheet" href="adam.css">
+	      <!--<link rel="stylesheet" href="adam.css"> -->
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
-    <a href="index">Home</a>
+    <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>Mr Elwer's CSP Portfolio Page!</h1>
