--- a/my_website2/portfolio.html
+++ b/my_website2/portfolio.html
@@ -2,15 +2,18 @@
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
-	      <!--<link rel="stylesheet" href="adam.css"> -->
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
-    <h1>Mr Elwer's CSP Portfolio Page!</h1>
+    <h1>This is my Portfolio Page!</h1>
+    <img src="images/portfolio.jpg" height="250">
     <br>
+    <a target="_blank" href="https://scratch.mit.edu">
+      <img src="images/scratchlogo.png" height="100">
+    </a>
+    
 <table style = "width:100%">
     <tr>
         <th>Project Name</th>
@@ -18,13 +21,11 @@
         <th>Link</th>
     </tr>
     <tr>
-        <td>Scratch Project
-        <p>Asteroids</p></td>
+        <td>Scratch Project</td>
         <td><img src="images/Asteroids.png" height="250"></td>
-        <td><a href="https://scratch.mit.edu/projects/124415868/#fullscreen">https://scratch.mit.edu/projects/124415868/#fullscreen</a></td>
+        <td><a href="https://scratch.mit.edu/projects/124415868/#fullscreen">Link</a></td>
     </tr>
 </table>
-
-    </a>
-	</body>
+    
+	  </body>
 	</html>
