Class Student Grid

--- a/CSP/indexcss.html
+++ b/CSP/indexcss.html
@@ -9,7 +9,13 @@
     <a href="indexcss.html">Home</a>
     <a href="portfoliocss.html">Portfolio</a>
     <a href="aboutmecss.html">About Me</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <table>
+      <tr>
+        <td>
+          <h1>Welcome to Mr. Elwers Homepage</h1>
+          <p1>This example uses HTML and CSS</p1>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
