--- a/CSP/portfoliocss.html
+++ b/CSP/portfoliocss.html
@@ -11,7 +11,7 @@
     <a href="aboutmecss.html">About Me</a>
     <h1>Mr Elwer's CSP Portfolio Page!</h1>
     <br>
-<table style = "width:100%">
+<table>
     <tr>
         <th>Project Name</th>
         <th>Screen Shot</th>
