--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </a>
         </td>
         <td>
-          <h4>Hannah C</h4>
+          <h4>Hanna C</h4>
           <a href="https://hchristensenn.github.io/my_website/">
             <img src="https://hchristensenn.github.io/my_website/images/hanna1.jpg" width=100>
           </a>
