Updated Links for Matt, Michael, & Skyler

--- a/CSP/portfoliocss.html
+++ b/CSP/portfoliocss.html
@@ -26,7 +26,7 @@
         <td>App Inventor
         <p>Calculator Project</p></td>
         <td><img src="images/adam.jpg" height="250"></td>
-        <td><a href="appinventor/screenswitcher.aia">Download</a></td>
+        <td><a href="appinventor/screenswitcher.apk" download>Download</a></td>
     </tr>
 </table>
 
